tests/js/valid/enum/parses/spaces-0.buri
Items = .hello(Int, Str)
item = Items.hello( 1 , "" )
