tests/js/invalid/enum/mismatched-types-3.buri
Color = .rgb(Int, Int, Int) | .hex(Str)

blue = Color.rgb(1)